# typeracer

./: README.md  pyproject.toml  setup.cfg  setup.py
src/typeracer/: __main__.py  game.py  main.py  quotes.py  ui.py
src/typeracer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_game.py  test_quotes.py
